--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=930acc4772df61a44e059831a85c89df
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -28,7 +28,7 @@ APP_SECRET=930acc4772df61a44e059831a85c89df
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/ratvert?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
